made the nav bar and made it link to the other web pages

--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
 
     {/* nav bar */}
 
+    <header>
+        <nav>
+            <ul>
+                <li><a href="index.html">Homepage</a></li>
+                <li><a href="about-us.html">About Us</a></li>
+                <li><a href="donations.html">Donations</a></li>
+                <li><a href="find-us.html">Find Us</a></li>
+            </ul>
+        </nav>
+    </header>
+
     {/* add popup for login, not separate page in corner */}
 
 </body>
