--- a/about-us.html
+++ b/about-us.html
@@ -4,18 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
     <title>About us</title>
 </head>
 <body>
+    <div class="main-title">
+        <h1 class = "title">God's House</h1>
+    </div>
+
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Homepage</a></li>
-                <li><a href="about-us.html">About Us</a></li>
-                <li><a href="donations.html">Donations</a></li>
-                <li><a href="find-us.html">Find Us</a></li>
-            </ul>
-        </nav>
+        <div class="main-nav">
+            <nav>
+                <ul>
+                    <li class="homepage-nav"><a href="index.html">Home Page</a></li>
+                    <li class="about-nav"><a href="about-us.html">About Us</a></li>
+                    <li class="donations-nav"><a href="donations.html">Donations</a></li>
+                    <li class="findus-nav"><a href="find-us.html">Find Us</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
+
+    <h2>About us</h2>
+
+
+    <footer>
+        <div class="main-footer">
+            <div class="footer-content">
+                <h1 class="footer-title">GOD'S HOUSE</h1>
+                <ul class="footer-ul">
+                    <li class="li-2"> <a href="donations.html">Donations</a></li>
+                    <li class="li-2"> <a href="find-us.html">Location</a></li>
+                    <li class="li-2">Socials</li>
+                </ul>
+                <p class="footer-copyright">&copy;2025 Javascript - Final Project</p>
+            </div>
+        </div>
+    </footer>
+
 </body>
 </html>
