quotes and find us

--- a/donations.html
+++ b/donations.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
-    <title>Home</title>
+    <title>Donations</title>
 </head>
 <body>
 <div class="main-title">
@@ -26,25 +26,7 @@
     </div>
 </header>
 
-<div class="verseoftheday-div">
-    <div class="verseoftheday">Verse of the Day - PLACEHOLDER</div>
-</div>
-
-<div class="quote-section">
-    <h3 class="title-2">Daily Quote:</h3>
-    <p id="daily-quote" class="quote">TBA</p>
-</div>
-
-<div>
-    <div class="main-body-div">
-        <h1 class="main-welcome">Welcome to the House of God</h1>
-    </div>
-    <div class="location-div">
-        <div class="location-group">
-            <h3>Find us at - PLACE HOLDER: LOCATION</h3>
-        </div>
-    </div>
-</div>
+<h2>Donations</h2>
 
 <footer>
     <div class="main-footer">
@@ -59,20 +41,5 @@
         </div>
     </div>
 </footer>
-
-<script>
-    async function getDailyQuote() {
-        try {
-            const response = await fetch('https://zenquotes.io/api/random');
-            const data = await response.json();
-            document.getElementById('daily-quote').innerText = data[0].q + ' - ' + data[0].a;
-        } catch (error) {
-            console.error('Error fetching the quote:', error);
-            document.getElementById('daily-quote').innerText = "TBA";
-        }
-    }
-    window.onload = getDailyQuote;
-</script>
-
 </body>
 </html>
