--- a/find-us.html
+++ b/find-us.html
@@ -5,9 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
-    <title>Home</title>
+    <title>Find Us</title>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBA5b8WDFV0nqdkcVja-U2_V9cs69KyArY&callback=initMap" async defer></script>
+    <script>
+        function initMap() {
+            const location = { lat: 41.9029, lng: 12.4534 };
+            const map = new google.maps.Map(document.getElementById("map"), {
+                zoom: 15,
+                center: location,
+            });
+            new google.maps.Marker({
+                position: location,
+                map: map,
+                title: "St. Peter's Basilica",
+            });
+        }
+    </script>
 </head>
 <body>
+
 <div class="main-title">
     <h1 class="title">God's House</h1>
 </div>
@@ -26,24 +42,10 @@
     </div>
 </header>
 
-<div class="verseoftheday-div">
-    <div class="verseoftheday">Verse of the Day - PLACEHOLDER</div>
-</div>
-
-<div class="quote-section">
-    <h3 class="title-2">Daily Quote:</h3>
-    <p id="daily-quote" class="quote">TBA</p>
-</div>
-
-<div>
-    <div class="main-body-div">
-        <h1 class="main-welcome">Welcome to the House of God</h1>
-    </div>
-    <div class="location-div">
-        <div class="location-group">
-            <h3>Find us at - PLACE HOLDER: LOCATION</h3>
-        </div>
-    </div>
+<h2>Find Us</h2>
+<div class="location-div">
+    <h3>Our Location: St. Peter's Basilica</h3>
+    <div id="map" style="height: 400px; width: 80%; margin: 20px auto;"></div>
 </div>
 
 <footer>
@@ -59,20 +61,6 @@
         </div>
     </div>
 </footer>
-
-<script>
-    async function getDailyQuote() {
-        try {
-            const response = await fetch('https://zenquotes.io/api/random');
-            const data = await response.json();
-            document.getElementById('daily-quote').innerText = data[0].q + ' - ' + data[0].a;
-        } catch (error) {
-            console.error('Error fetching the quote:', error);
-            document.getElementById('daily-quote').innerText = "TBA";
-        }
-    }
-    window.onload = getDailyQuote;
-</script>
 
 </body>
 </html>
