--- a/quotes.html
+++ b/quotes.html
@@ -31,8 +31,8 @@
 </div>
 
 <div class="quote-section">
-    <h3 class="title-2">Daily Quote:</h3>
-    <p id="daily-quote" class="quote">TBA</p>
+    <h3 class="title-2">Daily Bible Verse:</h3>
+    <p id="daily-quote" class="quote">Loading...</p>
 </div>
 
 <div>
@@ -61,17 +61,19 @@
 </footer>
 
 <script>
-    async function getDailyQuote() {
+    async function getDailyBibleQuote() {
         try {
-            const response = await fetch('https://zenquotes.io/api/random');
+            const response = await fetch('https://beta.ourmanna.com/api/v1/get/?format=json');
             const data = await response.json();
-            document.getElementById('daily-quote').innerText = data[0].q + ' - ' + data[0].a;
+            const verse = data.verse.details.text;
+            const reference = data.verse.details.reference;
+            document.getElementById('daily-quote').innerText = verse + ' - ' + reference;
         } catch (error) {
-            console.error('Error fetching the quote:', error);
-            document.getElementById('daily-quote').innerText = "TBA";
+            console.error('Bible verse almost here:', error);
+            document.getElementById('daily-quote').innerText = "Inspiring Bible verse coming soon!";
         }
     }
-    window.onload = getDailyQuote;
+    window.onload = getDailyBibleQuote;
 </script>
 
 </body>
