combined quote page into homepage to show the verse of the day and working on the styling with it

--- a/find-us.html
+++ b/find-us.html
@@ -36,7 +36,6 @@
                 <li class="about-nav"><a href="about-us.html">About Us</a></li>
                 <li class="donations-nav"><a href="donations.html">Donations</a></li>
                 <li class="findus-nav"><a href="find-us.html">Find Us</a></li>
-                <li class="quotes-nav"><a href="quotes.html">Quotes</a></li>
             </ul>
         </nav>
     </div>
@@ -44,7 +43,7 @@
 
 <h2>Find Us</h2>
 <div class="location-div">
-    <h3>Our Location: St. Peter's Basilica</h3>
+    <h3 class="location-group">Our Location: St. Peter's Basilica</h3>
     <div id="map" style="height: 400px; width: 80%; margin: 20px auto;"></div>
 </div>
 
