--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </div>
     <div class="location-div">
         <div class="location-group">
-            <h3>Find us at - PLACE HOLDER: LOCATION</h3>
+            <h3>Find us at - PLACE HOLDER: </h3>
         </div>
     </div>
 </div>
