--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <script src="index.js"></script>
     <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
     <title>Home</title>
 </head>
@@ -39,6 +40,19 @@
             <h3>Find us at: </h3>
         </div>
     </div>
+</div>
+
+<div class="slideshow-container">
+    <img class="mySlides" src="Good Friday Service.png" >
+    <img class="mySlides" src="Praise and Worship.png" >
+    <img class="mySlides" src="Youth Service.png" >
+
+    <div class="dots-container">
+        <span class="dot" onclick="currentDiv(1)"></span>
+        <span class="dot" onclick="currentDiv(2)"></span>
+        <span class="dot" onclick="currentDiv(3)"></span>
+    </div>
+
 </div>
 
 <footer>
