--- a/about-us.html
+++ b/about-us.html
@@ -28,25 +28,27 @@
 
 <h2>About us</h2>
 
+<p>Welcome to St. Peter’s Basilica, a place we are proud to call God’s house. The doors are open to all of those who seek faith, hope, and community. We gather together for Good Friday services, lively praise and worship celebrations, along with a growing youth group dedicated to building strong foundations in Christ. Whether you're visiting or looking for a church to call home, you are and always will be welcome here.</p>
+
 <!-- Contact Section -->
 <section id="contact">
     <h2>Contact Us</h2>
-    
+
     <form id="contact-form">
-    <label for="name">Name: </label>
-    <span class="error" id="nameError"></span>
-    <br> <input type="text" id="name" name="name" placeholder="Enter your name">
-    <br>
-    <label>Email: </label> 
-    <span class="error" id="emailError"></span>
-    <br> <input type="text" id="email" name="email" placeholder="Enter your email">
-    <br>
-    <label>Message: </label>
-    <span class="error" id="messageError"></span>
-    <br><textarea id="message" name="message"></textarea>
-    <br>
-    <button class="submit-btn" type="submit" id="submitbtn">Send</button>
-</form>
+        <label for="name">Name: </label>
+        <span class="error" id="nameError"></span>
+        <br> <input type="text" id="name" name="name" placeholder="Enter your name">
+        <br>
+        <label>Email: </label>
+        <span class="error" id="emailError"></span>
+        <br> <input type="text" id="email" name="email" placeholder="Enter your email">
+        <br>
+        <label>Message: </label>
+        <span class="error" id="messageError"></span>
+        <br><textarea id="message" name="message"></textarea>
+        <br>
+        <button class="submit-btn" type="submit" id="submitbtn">Send</button>
+    </form>
 </section>
 
 <footer>
