updated donation page + added js functionality to it

--- a/donations.html
+++ b/donations.html
@@ -1,44 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Donations</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
-    <title>Donations</title>
+    <link href="./donation-styles.css" rel="stylesheet" type="text/css">
 </head>
+    <script src="./donationsScript.js"></script>
 <body>
-<div class="main-title">
-    <h1 class="title">God's House</h1>
-</div>
 
-<header>
-    <div class="main-nav">
-        <nav>
-            <ul>
-                <li class="homepage-nav"><a href="index.html">Home Page</a></li>
-                <li class="about-nav"><a href="about-us.html">About Us</a></li>
-                <li class="donations-nav"><a href="donations.html">Donations</a></li>
-                <li class="findus-nav"><a href="find-us.html">Find Us</a></li>
-            </ul>
-        </nav>
+    <div class="donations-titl">
+        <h1 class="title">Donations</h1>
     </div>
-</header>
 
-<h2>Donations</h2>
+    <div>
+        <header>
+            <div class="main-nav">
+                <nav>
+                    <ul>
+                        <li class="homepage-nav"><a href="index.html">Home Page</a></li>
+                        <li class="about-nav"><a href="about-us.html">About Us</a></li>
+                        <li class="currentDonationNav"><a href="donations.html">Donations</a></li>
+                        <li class="findus-nav"><a href="find-us.html">Find Us</a></li>
+                        <li class="quotes-nav"><a href="quotes.html">Quotes</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+    </div>
 
-<footer>
-    <div class="main-footer">
-        <div class="footer-content">
-            <h1 class="footer-title">GOD'S HOUSE</h1>
-            <ul class="footer-ul">
-                <li class="li-2"> <a href="donations.html">Donations</a></li>
-                <li class="li-2"> <a href="find-us.html">Location</a></li>
-                <li class="li-2">Socials</li>
-            </ul>
-            <p class="footer-copyright">&copy;2025 Javascript - Final Project</p>
+    <div>
+        <div class="why-donate-title-div">
+            <h1 class="why-donate-title">Why Donate?</h1>
+        </div>
+        <div class="why-donate-div">
+            
+            <p class="why-donate-paragraph">
+                <span class="acts-verse">Acts 20:35</span>
+                says 'In everything I did, I showed you that by this kind of hard work we must help the weak, remembering the words the 
+                Lord Jesus himself said: ‘It is more blessed to give than to receive.’ Donating to the House of God allows us to redistribute the
+                wealth to those in need. It is a blessing and a privilege to be able to give to those in need, as many cannot do such an act. Also, 
+                donating helps us with upkeep and rent of the place/website, allowing us to further expand our operations! God Bless!.
+            </p>
         </div>
     </div>
-</footer>
+
+    <div class="donations-section">
+        <div>
+            <div>Donate Today?</div>
+        </div>
+        <div>
+            <form>
+                <input type="text" placeholder="Name" required>
+                <input type="email" placeholder="Email" required>
+                <input type="number" placeholder="Amount in $" required>
+                <input type="text" placeholder="Zip Code" required>
+                <label class="money-reason-selector" for="money">Choose what to use Money for</label>
+                    <select>
+                        <option class="money-reason-selector" value="instruments">Church Instruments</option>
+                        <option class="money-reason-selector" value="instruments">Web Maintenance</option>
+                        <option class="money-reason-selector" value="instruments">Youth Program</option>
+                        <option class="money-reason-selector" value="instruments">Members in Need</option>
+                        <option class="money-reason-selector" value="instruments">General Use</option>
+                    </select>
+            </form>
+        </div>
+        <div>
+            <button id="donation-button" class="donation-button">SEND DONATION!</button>
+        </div>
+    </div>
+
+    <footer>
+        <div class="main-footer">
+            <div class="footer-content">
+                <h1 class="footer-title">GOD'S HOUSE</h1>
+                <ul class="footer-ul">
+                    <li class="li-2"> <a href="donations.html">Donations</a></li>
+                    <li class="li-2"> <a href="find-us.html">Location</a></li>
+                    <li class="li-2">Socials</li>
+                </ul>
+                <p class="footer-copyright">&copy;2025 Javascript - Final Project</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
