removed anything that was no longer needed in the website

--- a/about-us.html
+++ b/about-us.html
@@ -28,7 +28,7 @@
 
 <h2>About us</h2>
 
-<p>Welcome to St. Peter’s Basilica, a place we are proud to call God’s house. The doors are open to all of those who seek faith, hope, and community. We gather together for Good Friday services, lively praise and worship celebrations, along with a growing youth group dedicated to building strong foundations in Christ. Whether you're visiting or looking for a church to call home, you are and always will be welcome here.</p>
+<p id="about-us-text">Welcome to St. Peter’s Basilica, a place we are proud to call God’s house. The doors are open to all of those who seek faith, hope, and community. We gather together for Good Friday services, lively praise and worship celebrations, along with a growing youth group dedicated to building strong foundations in Christ. Whether you're visiting or looking for a church to call home, you are and always will be welcome here.</p>
 
 <!-- Contact Section -->
 <section id="contact">
