--- a/donations.html
+++ b/donations.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./donation-styles.css" rel="stylesheet" type="text/css">
+    <link rel="shortcut icon" href="icon.svg" type="image/x-icon">
 </head>
     <script src="./donationsScript.js"></script>
 <body>
 
     <div class="donations-titl">
-        <h1 class="title">Donations</h1>
+        <h1 class="title">God's House</h1>
     </div>
 
     <div>
@@ -22,7 +23,6 @@
                         <li class="about-nav"><a href="about-us.html">About Us</a></li>
                         <li class="currentDonationNav"><a href="donations.html">Donations</a></li>
                         <li class="findus-nav"><a href="find-us.html">Find Us</a></li>
-                        <li class="quotes-nav"><a href="quotes.html">Quotes</a></li>
                     </ul>
                 </nav>
             </div>
